<resources>
    <string name="app_name">Budget Buddy</string>

    <string name="launch_activity_title">Welcome to Budget Buddy</string>
    <string name="launch_activity_subtitle">To create your budget, click the button below</string>
    <string name="launch_activity_button">Create your budget</string>

    <string name="createbucket_done">Done</string>
    <string name="createbucket_addcategory">Add Category</string>
    <string name="createbucket_budget">Budget</string>
    <string name="createbucket_budgetedexpenses">Budgeted Expenses</string>
    <string name="createbucket_income">Income</string>
...
    <string name="createbucket_kitchen">Kitchen</string>
    <string name="createbucket_transportation">Transportation</string>

    <string name="main_addincome">Add Income</string>
    <string name="main_addestimate">Add Estimate</string>
    <string name="main_addexpense">Add Expense</string>
    <string name="main_total">Total</string>
    <string name="main_left">Left</string>
    <string name="main_ofincomespent">% of income spent</string>

    <string name="dialog_addcategory_title">Add Category</string>
    <string name="dialog_addcategory_button">Add</string>
    <string name="dialog_addcategory_ethint">Category Name</string>
...
