...
                    android:text="@string/doubledot"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/createbucket_income_tv"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/createbucket_income_et"
                    style="@style/Theme.TextView.EditText.Flat"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:digits="0123456789"
                    android:inputType="numberDecimal"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/createbucket_budgetedexpenses" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/createbucket_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </LinearLayout>

...
