<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/cratebucket_bnv_menu_addcategory"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/createbucket_addcategory" />

    <item
        android:id="@+id/cratebucket_bnv_menu_done"
        android:icon="@drawable/ic_baseline_check_circle_outline_24"
        android:title="@string/createbucket_done" />
</menu>