...
        android:text="@string/doubledot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_categoryentry_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/item_categoryentry_et"
        style="@style/Theme.TextView.EditText.Flat"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:digits="0123456789"
        android:inputType="numberDecimal"
...
