package com.budgetbuddy.app.activitys;


import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.InstrumentationRegistry;
import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import com.budgetbuddy.app.R;
import com.budgetbuddy.app.databases.Budgets;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.BeforeClass;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class MainActivityTest {

    @Rule
    public ActivityTestRule<Splash> mActivityTestRule = new ActivityTestRule<>(Splash.class);

    @BeforeClass
    public static void beforeClass(){
        //clear database before every test
        InstrumentationRegistry.getTargetContext().deleteDatabase(Budgets.DATABASE_NAME);
    }

    @Test
    public void mainActivityTest() {
        String income = "150";
        String expense = "100";
        //get button named "Create your budget"
        ViewInteraction materialButton = onView(
                allOf(withText("Create your budget"),
                        isDisplayed()));
        materialButton.perform(click());

        //get income textBox
        ViewInteraction editText = onView(
                allOf(withId(R.id.createbucket_income_et),
                        isDisplayed()));
        //set income text to income
        editText.perform(replaceText(income), closeSoftKeyboard());

        //get first expense category textBox
        ViewInteraction editText2 = onView(
                allOf(withId(R.id.item_categoryentry_et),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.createbucket_rv),
                                        0),
                                2),
                        isDisplayed()));
        //set first expense text to "100"
        editText2.perform(replaceText(expense), closeSoftKeyboard());

        //get "Done" button
        ViewInteraction bottomNavigationItemView = onView(
                allOf(withId(R.id.cratebucket_bnv_menu_done),
                        isDisplayed()));
        //click "Done" button
        bottomNavigationItemView.perform(click());

        //get "main total" label
        ViewInteraction textView = onView(
                allOf(withId(R.id.main_total),
                        isDisplayed()));
        //check "total" label is income
        textView.check(matches(withText(income)));

        //get "expense left" label
        ViewInteraction textView2 = onView(
                allOf(withId(R.id.expense_left),
                        isDisplayed()));
        //check "expense left" label is expense
        textView2.check(matches(withText(expense)));
    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
